Expands 20 questions exercise

--- a/applied-hash/tutorial/contents.tex
+++ b/applied-hash/tutorial/contents.tex
@@ -13,13 +13,37 @@
 \section{A secure guessing game}
 
 \begin{frame}
-  \begin{exercise}[20 questions]
+  \begin{exercise}[Secure 20 questions]
     \begin{itemize}
       \item Eve says to Alice: \enquote{I'm thinking of something, guess what 
         it is.}
       \item Alice can't guess it in 20 questions, so she loses.
       \item Make a construction so that Alice can be sure Eve doesn't change 
         what she's thinking of.
+    \end{itemize}
+  \end{exercise}
+\end{frame}
+
+\begin{frame}
+  \begin{exercise}[Secure 20 questions]
+    \begin{itemize}
+      \item Eve says to Alice: \enquote{I'm thinking of something, guess what 
+        it is.}
+      \item Alice can't guess it in 20 questions, so she loses.
+      \item Make a construction so that Alice can be sure Eve doesn't change 
+        what she's thinking of.
+    \end{itemize}
+  \end{exercise}
+
+  \begin{exercise}[More secure 20 questions]
+    \begin{itemize}
+      \item Alice says: \enquote{I asked \(X\) and you answered \(Y\),
+        but should've answered \(Y'\).}
+      \item Eve says: \enquote{No, you asked \(X'\) and I answered \(Y\) 
+        correctly.}
+      \item Make a construction so that Alice can prove that she asked \(X\) 
+        and Eve replied \(Y\).
+      \item (And consequently, Alice can't cheat either.)
     \end{itemize}
   \end{exercise}
 \end{frame}
