Adds notes from postbox tutorial session

--- a/applications/digital-postbox-tutorial/contents.tex
+++ b/applications/digital-postbox-tutorial/contents.tex
@@ -109,7 +109,17 @@ provide and why?
       \end{itemize}
     \end{question}
   \end{frame}
+}
 
+Notes from the session:
+\begin{itemize}
+  \item Same as Signal protocol.
+  \item Just tie in BankID to get real identities.
+  \item The problem of end-to-end encryption: lost keys doesn't work. But it 
+    still works with the existing digital mail services.
+\end{itemize}
+
+\mode<presentation>{%
   \begin{frame}
     \begin{exercise}[Adapt for anonymity]
       \begin{description}
