--- a/applications/digital-postbox-tutorial/contents.tex
+++ b/applications/digital-postbox-tutorial/contents.tex
@@ -78,6 +78,14 @@ We have the following requirements on the service:
 \end{description}
 \end{frame}
 
+\begin{frame}
+  \begin{remark}
+    DIGG\footnote{Myndigheten för digital förvaltning} sets the official 
+    requirements, see
+    \url{https://www.digg.se/digitala-tjanster/digital-post/digital-post-for-dig-som-leverantor/allmanna-villkor/allmanna-villkor-fr.o.m.-16-januari-2023/bilaga-1-krav-pa-sakerhet-for-brevladeoperatorer}.
+  \end{remark}
+\end{frame}
+
 Solving this assignment will touch upon almost every topic in the course.
 Make sure to base your designs on the theory of the course, add references 
 (that will help you).
