Improves text on group assignments

--- a/applications/digital-postbox-tutorial/contents.tex
+++ b/applications/digital-postbox-tutorial/contents.tex
@@ -119,8 +119,8 @@ provide and why?
       \begin{itemize}
         \item Groups of around three--four people.
         \item Pick one of the three tasks functionalities.
-        \item Work for 20 minutes.
-        \item Group presentations and discussions (\(< 5\) minutes/group).
+        \item Work for 15 minutes.
+        \item Group presentations and discussions.
       \end{itemize}
     \end{block}
   \end{frame}
@@ -128,7 +128,8 @@ provide and why?
   \begin{frame}
     \begin{solution}
       \begin{itemize}
-        \item Presentation from groups (\(< 5\) minutes/group).
+        \item Presentation from groups.
+        \item Comments from everyone else.
       \end{itemize}
     \end{solution}
 
@@ -137,6 +138,7 @@ provide and why?
         \item Obstacles?
         \item Limitations?
         \item Recovery from failure?
+        \item In whom do we trust?
       \end{itemize}
     \end{question}
   \end{frame}
@@ -170,7 +172,7 @@ Notes from the session:
       \begin{itemize}
         \item Groups of around three--four people.
         \item Work for 20 minutes.
-        \item Group presentations and discussions (15--20 minutes).
+        \item Group presentations and discussions.
       \end{itemize}
     \end{block}
   \end{frame}
@@ -178,13 +180,17 @@ Notes from the session:
   \begin{frame}
     \begin{solution}
       \begin{itemize}
-        \item Presentation from groups (15--20 minutes).
+        \item Presentation from groups.
+        \item Comments from everyone else.
       \end{itemize}
     \end{solution}
 
     \begin{question}
       \begin{itemize}
+        \item Obstacles?
         \item Limitations?
+        \item Recovery from failure?
+        \item In whom do we trust?
       \end{itemize}
     \end{question}
   \end{frame}
