Add exercise on metadata
This opens the part on privacy. Also adds weak sender anonymity.

--- a/applications/digital-postbox-tutorial/contents.tex
+++ b/applications/digital-postbox-tutorial/contents.tex
@@ -152,10 +152,21 @@ Notes from the session:
     still works with the existing digital mail services.
 \end{itemize}
 
+\begin{frame}
+  \begin{exercise}
+    What metadata are revealed to whom?
+    How does this compare to the physical mail service?
+  \end{exercise}
+\end{frame}
+
 \mode<presentation>{%
   \begin{frame}
     \begin{exercise}[Adapt for anonymity]
       \begin{description}
+        \item[Weak sender anonymity]
+          Alice can send a letter to Bob, but the service will not learn the 
+          identity of the sender.
+
         \item[Sender anonymity]
           Alice can send a letter to Bob, but neither Bob nor the service will 
           learn the identity of the sender.
