Adds short assignment on digital identity to the postbox tutorial

--- a/applications/digital-postbox-tutorial/contents.tex
+++ b/applications/digital-postbox-tutorial/contents.tex
@@ -207,3 +207,12 @@ Notes from the session:
   \end{frame}
 }
 
+
+\section{Digital identity}
+
+\begin{frame}
+  \begin{exercise}
+    What requirements do we have on digital identity for our postbox system?
+    How can we achieve those requirements?
+  \end{exercise}
+\end{frame}
