Adds titled to exercises in the digital postbox tutorial

--- a/applications/digital-postbox-tutorial/contents.tex
+++ b/applications/digital-postbox-tutorial/contents.tex
@@ -29,7 +29,7 @@ You should design a digital postbox and delivery service.
 }
 
 \begin{frame}
-\begin{exercise}
+\begin{exercise}[Functionality]
   What functionality do we need? (High level)
 \end{exercise}
 
@@ -46,7 +46,7 @@ You should design a digital postbox and delivery service.
 \end{frame}
 
 \begin{frame}
-\begin{exercise}
+\begin{exercise}[Requirements]
   What are the requirements on the service?
 \end{exercise}
 \end{frame}
@@ -153,8 +153,8 @@ Notes from the session:
 \end{itemize}
 
 \begin{frame}
-  \begin{exercise}
-    What metadata are revealed to whom?
+  \begin{exercise}[Data and metadata]
+    What data and metadata are revealed to whom?
     How does this compare to the physical mail service?
   \end{exercise}
 \end{frame}
