Updates one-way, merge Douglas' slides

--- a/one-way/preamble.tex
+++ b/one-way/preamble.tex
@@ -9,8 +9,8 @@
 \usepackage{multicol}
 \usepackage{booktabs}
 \usepackage[strict]{csquotes}
-\usepackage{cleveref}
 \usepackage{amssymb,amsmath,amsthm}
+\usepackage{pdfpages}
 
 \setbeamertemplate{bibliography item}[text]
 \usepackage[natbib,sorting=none,maxbibnames=99]{biblatex}
@@ -23,3 +23,4 @@
 
 \usepackage{tikz}
 \usetikzlibrary{arrows}
+\usepackage{cleveref}
