--- a/one-way/one-way-slides.tex
+++ b/one-way/one-way-slides.tex
@@ -38,11 +38,12 @@
   Daniel Bosk
 }
 \institute[KTH/MIUN]{%
-  School of Computer Science and Communication,\\
-  KTH Royal Institute of Technology, Stockholm
-  \and
-  Department of Information and Communication Systems,\\
-  Mid Sweden University, Sundsvall
+  School of Electrical Engineering and Computer Science,\\
+  KTH Royal Institute of Technology, Stockholm\footnote{%
+    Part of the work was done while at the
+    Department of Information and Communication Systems,
+    Mid Sweden University, Sundsvall.
+  }
 }
 \date{\today}
 
@@ -51,6 +52,8 @@
 \begin{frame}
 \maketitle
 \end{frame}
+
+\mode<all>{\includepdf[pages=1]{./dog-hash-tilkry24.pdf}}
 
 \begin{abstract}
   \input{abstract.tex}
