--- a/pub-key/preamble.tex
+++ b/pub-key/preamble.tex
@@ -11,6 +11,7 @@
 \usepackage[strict]{csquotes}
 \usepackage{cleveref}
 \usepackage{amssymb,amsmath,amsthm}
+\usepackage{pdfpages}
 
 \setbeamertemplate{bibliography item}[text]
 \usepackage[natbib,sorting=none,maxbibnames=99]{biblatex}
