Adds comment on capability agreement to digital postbox tutorial

--- a/applications/digital-postbox-tutorial/contents.tex
+++ b/applications/digital-postbox-tutorial/contents.tex
@@ -86,6 +86,15 @@ We have the following requirements on the service:
   \end{remark}
 \end{frame}
 
+\begin{frame}[fragile]
+  \begin{remark}[Requirement]
+    \begin{itemize}
+      \item Must work with EIDAS\@.
+      \item Implementations from other countries might use other algorithms.
+    \end{itemize}
+  \end{remark}
+\end{frame}
+
 Solving this assignment will touch upon almost every topic in the course.
 Make sure to base your designs on the theory of the course, add references 
 (that will help you).
