Postbox: updates to use didactic package

--- a/applications/digital-postbox-tutorial/preamble.tex
+++ b/applications/digital-postbox-tutorial/preamble.tex
@@ -10,7 +10,7 @@
 \renewcommand{\foreignfullfont}{}
 \renewcommand{\foreignabbrfont}{}
 
-\usepackage{newclude}
+%\usepackage{newclude}
 \usepackage{import}
 
 \usepackage[strict]{csquotes}
@@ -37,3 +37,4 @@
 \usepackage[binary-units]{siunitx}
 
 \usepackage[capitalize]{cleveref}
+\usepackage{didactic}
