--- a/applications/digital-postbox-tutorial/notes.tex
+++ b/applications/digital-postbox-tutorial/notes.tex
@@ -1,28 +1,18 @@
-\documentclass{article}
+\documentclass[a4paper,article,oneside]{memoir}
+\let\subsubsection\subsection
+\let\subsection\section
+\let\section\chapter
+
+\usepackage[noamsthm,notheorems]{beamerarticle}
+\setjobnamebeamerversion{slides}
 
 \usepackage[hyphens]{url}
 \usepackage[hidelinks]{hyperref}
 
 \input{preamble.tex}
 
-\usepackage[noamsthm,notheorems]{beamerarticle}
-\setjobnamebeamerversion{slides}
-
 %\usepackage{authblk}
 %\let\institute\affil
-
-\declaretheorem[numbered=unless unique,style=theorem]{theorem}
-\declaretheorem[numbered=unless unique,style=definition]{definition}
-\declaretheorem[numbered=unless unique,style=definition]{assumption}
-\declaretheorem[numbered=unless unique,style=definition]{protocol}
-\declaretheorem[numbered=unless unique,style=example]{example}
-%\declaretheorem[style=definition,numbered=unless unique,
-%  name=Example,refname={example,examples}]{example}
-\declaretheorem[numbered=unless unique,style=remark]{remark}
-\declaretheorem[numbered=unless unique,style=remark]{idea}
-\declaretheorem[numbered=unless unique,style=exercise]{exercise}
-\declaretheorem[numbered=unless unique,style=exercise]{question}
-\declaretheorem[numbered=unless unique,style=solution]{solution}
 
 \begin{document}
 \title{%
