Expands INL1Written scenarios with detailed cryptographic solutions
Splits 2025.tex into 2025a.tex (police body cams) and 2025b.tex (parcel
delivery boxes). Adds comprehensive worked solutions covering symmetric
encryption, HMAC integrity, digital signatures, and threshold cryptography.
Includes pedagogical notes using variation theory and pQBL frameworks.

--- a/project/abstract.tex
+++ b/project/abstract.tex
@@ -33,11 +33,11 @@ The material is designed so that the student should learn the following%
 reasoning to others}.
 }.
 \begin{restatable}{lo}{LOapply}\label{LOapply}
-  The student should be albe to \emph{construct} solutions to relevant problems 
+  The student should be able to \emph{construct} solutions to relevant problems 
   by combining cryptographic primitives into a secure system.
 \end{restatable}
 \begin{restatable}{lo}{LOanalyse}\label{LOanalyse}
-  The student should be albe to \emph{evaluate} cryptographic constructs 
+  The student should be able to \emph{evaluate} cryptographic constructs 
   regarding how well they protect from threats.
 \end{restatable}
 
