--- a/project/contents.tex
+++ b/project/contents.tex
@@ -1,6 +1,10 @@
 \title{Some problems and solutions\\
        in Applied Cryptography}
-\author{Daniel Bosk}
+\author{Daniel Bosk\thanks{%
+    This work is licensed under a Creative Commons Attribution-ShareAlike 4.0
+    International License.
+    \url{https://creativecommons.org/licenses/by-sa/4.0/}%
+}}
 \institute{KTH EECS}
 
 \mode*
@@ -23,7 +27,8 @@
 \clearpage
 
 
-\input{2025.tex}
+\input{2025a.tex}
+\input{2025b.tex}
 \input{2024.tex}
 
 
